--- a/app/views/feedbacks/_logged_in.html.erb
+++ b/app/views/feedbacks/_logged_in.html.erb
@@ -12,7 +12,16 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <p class="card-text"><%= feedback.body %></p>
+                    <p class="card-text">
+                        【Aim to Assist】
+                        <br>
+                        <%= simple_format(h(feedback.assist)) %>
+                    </p>
+                    <p class="card-text">
+                        【Actionable】
+                        <br>
+                        <%= simple_format(h(feedback.action)) %>
+                    </p>
                 </div>
             </div>
         </div>
