--- a/app/views/feedbacks/edit.html.erb
+++ b/app/views/feedbacks/edit.html.erb
@@ -1,14 +1,22 @@
 <h3>再送信（修正）画面</h3>
 
 <%= form_tag("/feedbacks/"+@feedback.id.to_s,:method=>:patch) do %>
-    <span>To：</span><%= select_tag "feedbacks[user]", options_from_collection_for_select(@users, :id, :name, @feedback.user_id) %>
+    <div>
+        <%= label_tag "form-content", "To" %>
+        <p><%= select_tag "feedbacks[user]", options_from_collection_for_select(@users, :id, :name, @feedback.user_id) %></p>
+    </div>
     <div class="form-group">
-        <%= label_tag "form-title", "Title" %>
+        <%= label_tag "form-title", "タイトル" %>
         <%= text_field :feedbacks, :title, id:"form-title", class:"form-control", value: @feedback.title %>
     </div>
     <div class="form-group">
-        <%= label_tag "form-content", "Content" %>
-        <%= text_area :feedbacks, :body, id:"form-content", class:"form-control", value: @feedback.body %>
+        <%= label_tag "form-content-assist", "フィードバック内容(Aim to Assist）" %>
+        <%= text_area :feedbacks, :assist, id:"form-content-assist", class:"form-control", value: @feedback.assist %>
     </div>
+    <div class="form-group">
+        <%= label_tag "form-content-action", "フィードバック内容(Actionable）" %>
+        <%= text_area :feedbacks, :action, id:"form-content-action", class:"form-control", value: @feedback.action %>
+    </div>
+    
         <%= submit_tag "Edit",class:"btn btn-primary" %>
 <% end %>
